# bff-university

./: .coverage  .coveragerc  .env.example  .gitignore  Dockerfile  Dockerfile.terraform  Makefile  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requeriments.txt  requirements.txt  runner.py  setup.cfg  vercel.json
.github/workflows/: cd.yml
adapters/src/: __init__.py
adapters/src/repositories/: __init__.py
adapters/src/repositories/memory/: MemoryHotelRepository.py  MemoryReservationRepository.py  __init__.py
adapters/src/repositories/mongodb_repository/: __init__.py  mongo_db_repository.py
adapters/src/repositories/rapid_api/: __init__.py  rapid_api_repository.py
adapters/tests/fixtures/: __init__.py  mongo_db_fixtures.py  rapid_api_fixtures.py
api/: __init__.py
api/events/: register.py
api/routers/: __init__.py  hotels.py  index.py  reservations.py
api/tests/fixtures/: __init__.py  client.py
api/tests/routers/: test_create_reservation.py  test_list_hotels_router.py
core/: __init__.py
core/src/: __init__.py
core/src/exceptions/: __init__.py
core/src/exceptions/business/: __init__.py  base.py  hotel.py  reservation.py
core/src/helpers/: __init__.py  parse_hotels.py
core/src/models/: Hotel.py  Reservation.py  __init__.py
core/src/repositories/: HotelRepository.py  ReservationRepository.py  __init__.py
core/src/usecases/: __init.py
core/src/utils/: __init__.py  rest_client.py  status_codes.py
core/tests/factory/: hotel..py  hotel.py  reservation.py
core/tests/fixtures/: hotel_fixture.py
factories/: __init__.py
factories/config/: __init__.py
factories/config/mongo_db_reservation/: __init__.py  reservation.py
factories/config/rapid_api_hotels/: __init__.py  hotels.py
factories/config/repositories/: __init__.py  base.py  hotel.py  reservation.py
factories/repositories/: __init__.py  hotel.py  reservation.py
factories/use_cases/: hotel.py
factories/usecases/: hotel.py  reservation.py
infrastructure/: main.tf
(+17 files in other folders)
