[tool.poetry]
name = "bff"
version = "0.1.0"
description = "Backend for frontend"
authors = ["Rocio Poppe"]

[tool.poetry.dependencies]
python = "^3.9.14"
pytest = "^7.4.0"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.17"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.7.0"
autoflake = "^2.2.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
autoflake = "^2.2.0"