[tool.poetry]
name = "bff"
version = "0.1.0"
description = "Backend for frontend"
authors = ["Rocio Poppe"]

[tool.poetry.dependencies]
python = "^3.9.14"
pytest = "^7.4.0"
fastapi = "^0.103.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.17"
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.7.0"
autoflake = "^2.2.0"
pymongo = "^4.8.0"
python-dateutil = "^2.8.2"
requests = "^2.26.0"
boto3 = "^1.34.141"
localstack-client = "^2.5"
botocore = "^1.34.141"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"
autoflake = "^2.2.0"

[tool.black]
exclude = '''
/(
    __init__\.py
)/
'''
line-length = 110

[tool.flake8]
exclude = '__init__.py' 
max-line-length = 110
per-file-ignores= __init__.py:F401